tests/bad/main/presence_main.go
package main;

/*
== Expected compiler output ==
File "./tests/bad/main/presence_main.go", line 0, characters -1--1:
error: missing method main
*/
